app/scss/_dataset.scss
////////////////////////////
//    Dataset Container   //
////////////////////////////

$list-item-bottom-border: 1px solid #979797;
$sidebar-item-padding:  6px 10px;
$hover-highlight-color: #F6F8FA;

#dataset-container {
  display: flex;
  flex-direction: column;
  height: 100%;

  .header {
    height: 50px;
    background-color: #315379;
    color: #F8F2F2;
    cursor: default;
    flex-direction: row;
    flex-grow: 0;
    flex-shrink: 0;
  }

  .header-column {
    display: inline-block;
    height: 100%;
    border-right: 1px solid #484d65;
    padding: 9px 28px 9px 9px;
    display: flex;
    flex-direction: row;

    img {
      flex: 0 0 32px;
    }

    .text {
      flex: 1;
      flex-grow: 1;
      overflow-x: hidden;

      .name {
        white-space: nowrap;
        text-overflow: ellipsis;
        display: block;
        overflow: hidden;
      }
    }

    &:hover {
      background-color: #416588;
    }

    &.expanded {
      border-right: none;
    }

    &.expanded:hover {
      background-color: transparent;
    }
  }

  .columns {
    display: flex;
    flex-direction: row;
    flex-grow: 1;
    overflow-y: auto;

    #sidebar {
      position: relative;
      flex: 0 0 auto;

      .resize-handle {
        position: absolute;
        right: -5px;
        top: 0px;
        height: 100%;
        width: 10px;
        cursor: ew-resize;
      }
    }

    .content-wrapper {
      flex: 1;
      position: relative;
      flex-basis: auto;
      overflow: hidden;

      .overlay {
        position: absolute;
        height: 100%;
        width: 100%;
        background-color: #000;
        opacity: 0.4;
      }

      .content {
        padding: 15px;
        overflow-x: scroll;
      }
    }
  }

  .current-dataset {
    width: 250px;
    position: relative;
    z-index:10;
    display:flex;

    img {
      margin-right:10px;
    }

    .label {
      font-size: 0.75rem;
      font-weight: 300;
      line-height: 0.8rem;
    }

    .name {
      font-weight: 600;
      line-height: 1.5rem;
    }

    .arrow {
      width: 0px;
      height: 0px;
      border-left: 5px solid transparent;
      border-right: 5px solid transparent;
      position: absolute;

      &.expand {
        border-top: 5px solid #fff;
        right: 15px;
        top: 24px;
      }

      &.collapse {
        border-bottom: 5px solid #383838;
        right: 15px;
        top: 24px;
      }
    }

    &.expanded {
      color: #383838;
    }
  }

  .dataset-list {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    width: 250px;
    background-color: #fff;
    padding-top: 50px;
  }

  .user-image {
    height: 16px;
    width: 16px;
    margin-right: 4px;
    border-radius: 2px;
  }

  .text-column {
    flex-direction: column;
    flex: 1;

    .text {
      white-space: nowrap;
      text-overflow: ellipsis;
      overflow: hidden;
      line-height: 1.6rem;
    }

    .subtext {
      display: flex;
      flex: 1;
      font-size: .65rem;
      line-height: 1.2rem;
      white-space: nowrap;
      text-overflow: ellipsis;
      overflow: hidden;
    }
  }
}

////////////////////////////
//     Dataset Sidebar    //
////////////////////////////

.dataset-sidebar {
  height: 100%;
  font-size: .9rem;
  cursor: default;

  #tabs {
    height: 30px;
    display: flex;

    .tab {
      width: 50%;
      height: 100%;
      flex: 1;
      text-align: center;
      line-height: 1.9rem;
      border-right: 1px solid #979797;

      &:last-child {
        border-right: 0;
      }

      &.active {
        border-bottom: 3px solid #315379;
      }

      &:hover {
        background-color: #efefef;
      }
    }
  }

  .changes {
    height: 30px;
    padding: 6px;
    background-color: $hover-highlight-color;
  }
}

////////////////////////////
//   Sidebar List Items   //
////////////////////////////

.sidebar-list-item {
  border-bottom: $list-item-bottom-border;
  display: flex;
}

.sidebar-list-item-text {
  padding: $sidebar-item-padding;
  flex-direction: row;

  &:hover {
    background-color: $hover-highlight-color;
  }

  &.selected {
    background-color: #e6e6e6;
  }

  .status-column {
    text-align: center;
    line-height: 2.9rem;
    width: 30px;

      .dot {
        height: 10px;
        width: 10px;
        background-color: transparent;
        border-radius: 50%;
        display: inline-block;
      }
  }
}


////////////////////////////
//     Commit Details     //
////////////////////////////

#commit-details {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  height: 100%;

  .commit-details-header {
    height: 60px;
    max-height: 60px;
    padding: $sidebar-item-padding;
    border-bottom: $list-item-bottom-border;
  }
}

